// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (--url-rule-doc) function cases should fallback to the normal URL when function returns undefined 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description             | ❌  |
| :----------------------------- | :---------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description for no-bar. |    |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (--url-rule-doc) function cases should fallback to the normal URL when function returns undefined 2`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                              | Description             | ❌  |
| :-------------------------------- | :---------------------- | :- |
| [no-bar](../docs/rules/no-bar.md) | Description for no-bar. |    |
| [no-foo](../docs/rules/no-foo.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (--url-rule-doc) function cases should fallback to the normal URL when function returns undefined 3`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) function cases should fallback to the normal URL when function returns undefined 4`] = `
"# test/no-bar

📝 Description for no-bar.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) function cases uses the custom URL with function 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                                               | Description             | ❌  |
| :----------------------------------------------------------------- | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/name:no-bar/path:README.md) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/name:no-foo/path:README.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (--url-rule-doc) function cases uses the custom URL with function 2`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                                                      | Description             | ❌  |
| :------------------------------------------------------------------------ | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/name:no-bar/path:nested/README.md) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/name:no-foo/path:nested/README.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (--url-rule-doc) function cases uses the custom URL with function 3`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](https://example.com/rule-docs/name:no-bar/path:docs/rules/no-foo.md).

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) function cases uses the custom URL with function 4`] = `
"# test/no-bar

📝 Description for no-bar.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) uses the right URLs 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                                            | Description            | 💼    | 🔧 | 💡 | 💭 |
| :---------------------------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](https://example.com/rule-docs/no-bar/) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](https://example.com/rule-docs/no-baz/) | Description of no-baz. |       |    |    |    |
| [no-foo](https://example.com/rule-docs/no-foo/) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (--url-rule-doc) uses the right URLs 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--url-rule-doc) uses the right URLs 3`] = `
"# test/no-bar

💼 This rule is enabled in the following configs: 🌐 \`all\`, 🎨 \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

💭 This rule requires [type information](https://typescript-eslint.io/linting/typed-linting).

📝 Description of no-bar.

<!-- end auto-generated rule header -->
## Rule details

details
"
`;
